test/files/neg/bug910.check
bug910.scala:4: error: type mismatch;
 found   : Sequence[Char]
 required: Seq[int]
    val y: Seq[int] = rest
                      ^
one error found
